added user verification middleware
